--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,17 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@hscmap/vue-window": "^1.7.8",
     "@websanova/vue-auth": "^2.21.1-beta",
     "axios": "^0.17.1",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
+    "leaflet": "^1.3.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-localstorage": "^0.6.1",
     "vue-router": "^3.0.1",
+    "vue2-leaflet": "0.0.58",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
