--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -14,9 +16,11 @@
     "jsonwebtoken": "^8.1.1",
     "less-middleware": "1.0.x",
     "lodash": "^4.17.4",
+    "mongoose": "^5.0.9",
     "morgan": "~1.6.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
+    "password-generator": "^2.2.0",
     "serve-favicon": "~2.3.0"
   }
 }
